[JENKINS-63343] List.of cannot be used with null values